# mementor

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  deno.json  mise.toml
.claude/: settings.json
.claude/skills/worktree/: SKILL.md
.claude/skills/worktree/scripts/: worktree_settings.ts  worktree_settings_test.ts
.github/actions/setup-mise-macos/: action.yml
.github/workflows/: ci.yml  deno.yml
crates/mementor-cli/: Cargo.toml
crates/mementor-cli/src/: cli.rs  lib.rs  logging.rs  test_util.rs
crates/mementor-cli/src/commands/: enable.rs  ingest.rs  mod.rs  query.rs
crates/mementor-cli/src/hooks/: input.rs  mod.rs  prompt.rs  stop.rs
crates/mementor-lib/: Cargo.toml  build.rs
crates/mementor-lib/src/: config.rs  context.rs  git.rs  lib.rs  output.rs  runtime.rs  test_util.rs
crates/mementor-lib/src/db/: connection.rs  driver.rs  mod.rs  queries.rs  schema.rs
crates/mementor-lib/src/embedding/: embedder.rs
crates/mementor-lib/src/pipeline/: chunker.rs  ingest.rs  mod.rs
crates/mementor-lib/src/transcript/: parser.rs  types.rs
crates/mementor-main/: Cargo.toml
crates/mementor-main/src/: main.rs
crates/mementor-test-util/: Cargo.toml
crates/mementor-test-util/src/: git.rs
docs/: deno-script-conventions.md  testing-patterns.md
history/: 2026-02-17_di-refactoring-db-injection.md  2026-02-17_init-mementor.md  2026-02-17_subcommand-integration-tests.md  2026-02-18_fix-null-hook-input.md  2026-02-18_fix-settings-key-order.md  2026-02-18_improve-recall-quality.md  2026-02-18_thinking-block-indexing.md  2026-02-18_workflow-and-permissions.md  2026-02-18_worktree-skill.md  2026-02-19_recall-quality-v3.md  2026-02-19_worktree-db-sharing.md
scripts/: update-sqlite-vector.sh
