[workspace]
members = [
    "crates/mementor-lib",
    "crates/mementor-cli",
    "crates/mementor-main",
    "crates/mementor-test-util",
]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
