[package]
name = "mementor-cli"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
mementor-lib = { version = "0.1.0", path = "../mementor-lib" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.25.0"
